References/ExportedTemplate-DxCLab_RS01/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "extensions_Microsoft.Insights.VMDiagnosticsSettings_storageAccountName": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "extensions_Microsoft.Insights.VMDiagnosticsSettings_storageAccountKey": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualMachines_dxcrtu16csa01_name": {
            "defaultValue": "dxcrtu16csa01",
            "type": "String"
        },
        "networkInterfaces_dxcrtu16csa01369_name": {
            "defaultValue": "dxcrtu16csa01369",
            "type": "String"
        },
        "networkSecurityGroups_DxCLab_NSG01_name": {
            "defaultValue": "DxCLab_NSG01",
            "type": "String"
        },
        "publicIPAddresses_dxcrtu16csa01_ip_name": {
            "defaultValue": "dxcrtu16csa01-ip",
            "type": "String"
        },
        "virtualNetworks_Dxc_Lab_vNet01_name": {
            "defaultValue": "Dxc_Lab_vNet01",
            "type": "String"
        },
        "storageAccounts_dxclabrs01csasa01_name": {
            "defaultValue": "dxclabrs01csasa01",
            "type": "String"
        },
        "extensions_Microsoft.Insights.VMDiagnosticsSettings_name": {
            "defaultValue": "dxcrtu16csa01/Microsoft.Insights.VMDiagnosticsSettings",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/4e92696b-bf3a-4aee-b4fe-db3d360381c7/resourceGroups/DxCLab_RS01/providers/Microsoft.Compute/virtualMachines/dxcrtu16csa01'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_dxcrtu16csa01_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS2_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[parameters('virtualMachines_dxcrtu16csa01_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_dxclabrs01csasa01_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_dxcrtu16csa01_name'),'20170316054449.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_dxcrtu16csa01_name')]",
                    "adminUsername": "docker",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_dxcrtu16csa01369_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "https://mypersonalrsdiag285.blob.core.windows.net/"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_dxclabrs01csasa01_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_dxcrtu16csa01369_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4e92696b-bf3a-4aee-b4fe-db3d360381c7/resourceGroups/DxCLab_RS01/providers/Microsoft.Network/networkInterfaces/dxcrtu16csa01369'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_dxcrtu16csa01369_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.2.0.4",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_dxcrtu16csa01_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Dxc_Lab_vNet01_name')), '/subnets/DxCLab_SN_FE')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": true,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_DxCLab_NSG01_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_dxcrtu16csa01_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Dxc_Lab_vNet01_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_DxCLab_NSG01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4e92696b-bf3a-4aee-b4fe-db3d360381c7/resourceGroups/DxCLab_RS01/providers/Microsoft.Network/networkSecurityGroups/DxCLab_NSG01'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_DxCLab_NSG01_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "RDP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4e92696b-bf3a-4aee-b4fe-db3d360381c7/resourceGroups/DxCLab_RS01/providers/Microsoft.Network/publicIPAddresses/dxcrtu16csa01-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_dxcrtu16csa01_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "dxcrtu16csa01"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4e92696b-bf3a-4aee-b4fe-db3d360381c7/resourceGroups/DxCLab_RS01/providers/Microsoft.Network/virtualNetworks/Dxc_Lab_vNet01'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_Dxc_Lab_vNet01_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.2.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "DxCLab_SN_FE",
                        "properties": {
                            "addressPrefix": "10.2.0.0/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_DxCLab_NSG01_name'))]"
                            }
                        }
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_DxCLab_NSG01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4e92696b-bf3a-4aee-b4fe-db3d360381c7/resourceGroups/dxclab_rs01/providers/Microsoft.Storage/storageAccounts/dxclabrs01csasa01'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Premium_LRS",
                "tier": "Premium"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_dxclabrs01csasa01_name')]",
            "apiVersion": "2016-01-01",
            "location": "westeurope",
            "tags": {},
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4e92696b-bf3a-4aee-b4fe-db3d360381c7/resourceGroups/DxCLab_RS01/providers/Microsoft.Compute/virtualMachines/dxcrtu16csa01/extensions/Microsoft.Insights.VMDiagnosticsSettings'.",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[parameters('extensions_Microsoft.Insights.VMDiagnosticsSettings_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westeurope",
            "properties": {
                "publisher": "Microsoft.OSTCExtensions",
                "type": "LinuxDiagnostic",
                "typeHandlerVersion": "2.3",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "xmlCfg": "PFdhZENmZz48RGlhZ25vc3RpY01vbml0b3JDb25maWd1cmF0aW9uIG92ZXJhbGxRdW90YUluTUI9IjQwOTYiPjxEaWFnbm9zdGljSW5mcmFzdHJ1Y3R1cmVMb2dzIHNjaGVkdWxlZFRyYW5zZmVyUGVyaW9kPSJQVDFNIiBzY2hlZHVsZWRUcmFuc2ZlckxvZ0xldmVsRmlsdGVyPSJXYXJuaW5nIi8+PFBlcmZvcm1hbmNlQ291bnRlcnMgc2NoZWR1bGVkVHJhbnNmZXJQZXJpb2Q9IlBUMU0iPjxQZXJmb3JtYW5jZUNvdW50ZXJDb25maWd1cmF0aW9uIGNvdW50ZXJTcGVjaWZpZXI9IlxNZW1vcnlcQXZhaWxhYmxlTWVtb3J5IiBzYW1wbGVSYXRlPSJQVDE1UyIgdW5pdD0iQnl0ZXMiPjxhbm5vdGF0aW9uIGRpc3BsYXlOYW1lP [...]
                },
                "protectedSettings": {
                    "storageAccountName": "[parameters('extensions_Microsoft.Insights.VMDiagnosticsSettings_storageAccountName')]",
                    "storageAccountKey": "[parameters('extensions_Microsoft.Insights.VMDiagnosticsSettings_storageAccountKey')]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_dxcrtu16csa01_name'))]"
            ]
        }
    ]
}
